--- a/index.html
+++ b/index.html
@@ -52,22 +52,7 @@
       }
       .animate-flash { animation: flash 0.5s ease-out; }
     </style>
-    <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@18.2.0",
-    "react-dom": "https://esm.sh/react-dom@18.2.0",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-    "@google/genai": "https://esm.sh/@google/genai",
-    "jszip": "https://esm.sh/jszip",
-    "groq-sdk": "https://esm.sh/groq-sdk",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
-  }
-}
-</script>
-  <link rel="stylesheet" href="/index.css">
+    <!-- Import map removed - Vite handles module bundling -->
 </head>
   <body>
     <div id="root"></div>
