--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
     <!-- Import map removed - Vite handles module bundling -->
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Loading indicator while JS loads -->
+      <div style="display: flex; align-items: center; justify-content: center; min-height: 100vh; background: #0d0d0f; color: #fff; font-family: system-ui;">
+        <div style="text-align: center;">
+          <div style="width: 50px; height: 50px; border: 4px solid #333; border-top-color: #a855f7; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 20px;"></div>
+          <h2 style="margin: 0; font-size: 24px; font-weight: 600;">Nexus Coder</h2>
+          <p style="margin: 10px 0 0; color: #888;">Loading...</p>
+        </div>
+      </div>
+      <style>
+        @keyframes spin {
+          to { transform: rotate(360deg); }
+        }
+      </style>
+    </div>
     <script type="module" src="/index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
