--- a/index.html
+++ b/index.html
@@ -51,6 +51,28 @@
         50% { box-shadow: 0 0 10px 4px rgba(192, 132, 252, 0.5); }
       }
       .animate-flash { animation: flash 0.5s ease-out; }
+      
+      @keyframes slide-in-right {
+        from {
+          transform: translateX(100%);
+          opacity: 0;
+        }
+        to {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
+      .animate-slide-in-right {
+        animation: slide-in-right 0.3s ease-out;
+      }
+      
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fade-in 0.2s ease-out;
+      }
     </style>
     <!-- Import map removed - Vite handles module bundling -->
 </head>
